--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">booking-auth</a>
+      <a href="/" class="navbar-brand">The Charles Stewart</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
