introduced some styling

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -18,6 +18,10 @@
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
+@import 'common/less/layout.less';
+@import 'common/less/media-queries.less';
+@import 'common/less/navbar.less';
+@import 'common/less/variables.less';
 @import 'main/main.less';
 @import 'modal/modal.less';
 // endinjector
