styling for new color scheme

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -19,9 +19,8 @@
 @import 'account/login/login.less';
 @import 'admin/admin.less';
 @import 'common/less/layout.less';
-@import 'common/less/media-queries.less';
-@import 'common/less/navbar.less';
 @import 'common/less/variables.less';
 @import 'main/main.less';
+@import 'property/property.less';
 @import 'modal/modal.less';
 // endinjector
