inventory and reservations template

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -20,7 +20,9 @@
 @import 'admin/admin.less';
 @import 'common/less/layout.less';
 @import 'common/less/variables.less';
+@import 'inventory/inventory.less';
 @import 'main/main.less';
 @import 'property/property.less';
+@import 'reservations/reservations.less';
 @import 'modal/modal.less';
 // endinjector
