--- a/client/components/partials/sidebar.html
+++ b/client/components/partials/sidebar.html
@@ -1,7 +1,7 @@
 <div class="col-sm-3">
-  <a href="#"><strong><i class="glyphicon glyphicon-link"></i> Reservations</strong></a>
+  <a href="/reservations"><strong><i class="glyphicon glyphicon-link"></i> Reservations</strong></a>
   <hr>
-  <a href="#"><strong><i class="glyphicon glyphicon-list"></i> Inventory</strong></a>
+  <a href="/inventory"><strong><i class="glyphicon glyphicon-list"></i> Inventory</strong></a>
   <hr>
   <a href="#"><i class="glyphicon glyphicon-wrench"></i><Strong> Setup</Strong></a>
   <ul class="nav nav-stacked">
