--- a/client/app/common/less/layout.less
+++ b/client/app/common/less/layout.less
@@ -5,20 +5,26 @@ body {
   color: @brand-info;
 }
 
-.navbar {
-  background-color: @menu-bar-background;
-  .navbar-nav {
-    > li {
-      .active {
-        background-color: #23b7e5;
-      }
-      > a {
-        line-height: 21px;
-        color: @menu-item;
+.navbar-wrapper {
+  margin-top: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+
+  .navbar {
+    background-color: @menu-bar-background;
+    .navbar-nav {
+      > li {
+        .active {
+          background-color: #23b7e5;
+        }
+        > a {
+          line-height: 21px;
+          color: @menu-item;
+        }
       }
     }
-  }
 
+  }
 }
 
 .sidebar {
