--- a/client/components/partials/navbar.html
+++ b/client/components/partials/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Book My Room</a>
+      <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
