added login functionality

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -25,4 +25,6 @@
 @import 'property/property.less';
 @import 'reservations/reservations.less';
 @import 'modal/modal.less';
+@import 'partials/navbar.less';
+@import 'partials/sidebar.less';
 // endinjector
