--- a/client/app/account/login/login.less
+++ b/client/app/account/login/login.less
@@ -1,5 +1,30 @@
-// Colors
-// --------------------------------------------------
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
 
-@btnText:                           #fff;
-@btnTextAlt:                        #000;
+  input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+    &:focus {
+      z-index: 2;
+    }
+  }
+}
